--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<marquee> Welcome to Accio Jobs </marquee>
+	<marquee> <h1>Welcome to Accio Jobs! </h1> </marquee>
 <div>
 	<h1> <a href="https://acciojob.com/blog/" >Blog</a></h1>
 </div>
